--- a/home/stags/fastfetch/config.jsonc
+++ b/home/stags/fastfetch/config.jsonc
@@ -1,97 +1,56 @@
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-   "modules": [
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────────Hardware──────────────────────┐"
-        },
-        {
-            "type": "host",
-            "key": " PC",
-            "keyColor": "green"
-        },
-        {
-            "type": "cpu",
-            "key": "│ ├",
-            "showPeCoreCount": true,
-            "keyColor": "green"
-        },
-        {
-            "type": "gpu",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "memory",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "disk",
-            "key": "└ └",
-            "keyColor": "green"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────────────┘"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────────Software──────────────────────┐"
-        },
-        {
-            "type": "os",
-            "key": " OS",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "kernel",
-            "key": "│ ├",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "packages",
-            "key": "│ ├󰏖",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "shell",
-            "key": "└ └",
-            "keyColor": "yellow"
-        },
-        "break",
-        {
-            "type": "de",
-            "key": " DE",
-            "keyColor": "blue"
-        },
-        {
-            "type": "lm",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wm",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wmtheme",
-            "key": "│ ├󰉼",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "key": "└ └󰍛",
-            "format": "{3}",
-            "keyColor": "blue"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────────────┘"
-        },
-        "break",
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "source": "~/.config/fastfetch/afpp-ascii.txt",
+    "padding": {
+      "right": 5
+    },
+    "color": [
+      "cyan",
+      "blue"
     ]
+  },
+  "display": {
+    "separator": " •",
+    "color": "distro",
+    "underline": true,
+    "underlineChar": "─"
+  },
+  "modules": [
+    {
+      "type": "title",
+      "key": ""
+    },
+    {
+      "type": "kernel",
+      "key": " ",
+      "keyColor": "green"
+    },
+    {
+      "type": "uptime",
+      "key": " ",
+      "keyColor": "yellow",
+      "duration": {
+        "maxUnitCount": 2
+      }
+    },
+    {
+      "type": "packages",
+      "key": " ",
+      "keyColor": "blue",
+      "managers": "all"
+    },
+    {
+      "type": "wm",
+      "key": " ",
+      "keyColor": "magenta"
+    },
+    {
+      "type": "shell",
+      "key": " ",
+      "keyColor": "green",
+      "format": "{1} {2}"
+    },
+    "colors"
+  ]
 }
